--- a/weekopdrachten week 1/w1o4.html
+++ b/weekopdrachten week 1/w1o4.html
@@ -16,14 +16,14 @@
 </body>
 <script>
     function knopklik(deknop){
-        var zin = "Je klikte op de knop "
+        var zin = "Je klikte op de knop ";
         var totaal = zin + deknop;
         var appenddata = document.getElementById("box1");
         /*for(var x = 0 ; x < deknop.length ; x++){
             //console.log(zin+welkeknop[x]);
             //document.getElementById("box1").innerHTML = zin+welkeknop;
         }*/
-        appenddata.insertAdjacentHTML('afterend', '<p>' + totaal + '</p>')
+        appenddata.insertAdjacentHTML('beforebegin', '<p>' + totaal + '</p>');
     }
 </script>
 </html>
