--- a/weekopdrachten week 1/w1o6.html
+++ b/weekopdrachten week 1/w1o6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>w1o6</title>
+    <title>w1o6 adv</title>
     <style>
         .wrapper{
             text-align: center;
@@ -53,7 +53,7 @@
         }
         if(jaarteller == 4){
             jaarverder++;
-            document.getElementById("jaarveld").innerHTML = jaarverder;
+            document.getElementById("jaarveld").innerHTML = jaarverder + " jaar voorbij";
             jaarteller = 0;
         }
     }
