--- a/weekopdracht week 2/Lingo.html
+++ b/weekopdracht week 2/Lingo.html
@@ -7,39 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <span id="result"></span>
-    <input class="letteropmaak" id="letter0_0" readonly="true" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter0_1" onKeyup="autotab(this, document.getElementById('letter0_2'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter0_2" onKeyup="autotab(this, document.getElementById('letter0_3'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter0_3" onKeyup="autotab(this, document.getElementById('letter0_4'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter0_4" maxlength="1" type="text"><br>
- 
-    <input class="letteropmaak" id="letter1_0" readonly="true" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter1_1" onKeyup="autotab(this, document.getElementById('letter1_2'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter1_2" onKeyup="autotab(this, document.getElementById('letter1_3'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter1_3" onKeyup="autotab(this, document.getElementById('letter1_4'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter1_4" maxlength="1" type="text"><br>
+    <div class="wrapper">
+        <span id="result"></span>
+        <input class="letteropmaak" id="letter0_0" readonly="true" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter0_1" onKeyup="autotab(this, document.getElementById('letter0_2'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter0_2" onKeyup="autotab(this, document.getElementById('letter0_3'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter0_3" onKeyup="autotab(this, document.getElementById('letter0_4'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter0_4" maxlength="1" type="text"><br>
+    
+        <input class="letteropmaak" id="letter1_0" readonly="true" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter1_1" onKeyup="autotab(this, document.getElementById('letter1_2'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter1_2" onKeyup="autotab(this, document.getElementById('letter1_3'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter1_3" onKeyup="autotab(this, document.getElementById('letter1_4'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter1_4" maxlength="1" type="text"><br>
 
-    <input class="letteropmaak" id="letter2_0" readonly="true" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter2_1" onKeyup="autotab(this, document.getElementById('letter2_2'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter2_2" onKeyup="autotab(this, document.getElementById('letter2_3'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter2_3" onKeyup="autotab(this, document.getElementById('letter2_4'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter2_4" maxlength="1" type="text"><br>
+        <input class="letteropmaak" id="letter2_0" readonly="true" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter2_1" onKeyup="autotab(this, document.getElementById('letter2_2'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter2_2" onKeyup="autotab(this, document.getElementById('letter2_3'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter2_3" onKeyup="autotab(this, document.getElementById('letter2_4'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter2_4" maxlength="1" type="text"><br>
 
-    <input class="letteropmaak" id="letter3_0" readonly="true" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter3_1" onKeyup="autotab(this, document.getElementById('letter3_2'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter3_2" onKeyup="autotab(this, document.getElementById('letter3_3'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter3_3" onKeyup="autotab(this, document.getElementById('letter3_4'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter3_4" maxlength="1" type="text"><br>
+        <input class="letteropmaak" id="letter3_0" readonly="true" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter3_1" onKeyup="autotab(this, document.getElementById('letter3_2'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter3_2" onKeyup="autotab(this, document.getElementById('letter3_3'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter3_3" onKeyup="autotab(this, document.getElementById('letter3_4'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter3_4" maxlength="1" type="text"><br>
 
-    <input class="letteropmaak" id="letter4_0" readonly="true" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter4_1" onKeyup="autotab(this, document.getElementById('letter4_2'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter4_2" onKeyup="autotab(this, document.getElementById('letter4_3'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter4_3" onKeyup="autotab(this, document.getElementById('letter4_4'))" maxlength="1" type="text">
-    <input class="letteropmaak" id="letter4_4" maxlength="1" type="text"><br>
+        <input class="letteropmaak" id="letter4_0" readonly="true" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter4_1" onKeyup="autotab(this, document.getElementById('letter4_2'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter4_2" onKeyup="autotab(this, document.getElementById('letter4_3'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter4_3" onKeyup="autotab(this, document.getElementById('letter4_4'))" maxlength="1" type="text">
+        <input class="letteropmaak" id="letter4_4" maxlength="1" type="text"><br>
 
-    <button id="check" onclick="check()">Check</button>
-    <button id="opnieuw" onclick="reload()">Opnieuw spelen</button>
+        <button id="check" onclick="check()">Check</button>
+        <button id="opnieuw" onclick="reload()">Opnieuw spelen</button>
+    </div>
 </body>
 <script>
 
