--- a/weekopdracht week 2/Lingo.html
+++ b/weekopdracht week 2/Lingo.html
@@ -46,21 +46,36 @@
 <script>
 
     var woordlijst = ["hallo", "ollah", "fiets", "steif"];
+    var rand = woordlijst[Math.floor(Math.random() * woordlijst.length)];
+    var rand2 = "";
 
     function reload(){
-        var rand = woordlijst[Math.floor(Math.random() * woordlijst.length)];
-        var r1t1 = rand[0];
-        var r1t2 = rand[1];
-        var r1t3 = rand[2];
-        var r1t4 = rand[3];
-        var r1t5 = rand[4];
         console.log(rand);
-        console.log (r1t1);
-        console.log (r1t2);
-        console.log (r1t3);
-        console.log (r1t4);
-        console.log (r1t5);
+        console.log (rand[0]);
+        console.log (rand[1]);
+        console.log (rand[2]);
+        console.log (rand[3]);
+        console.log (rand[4]);
+        rand2 = rand;
+        document.getElementById("letter0_0").value = rand[0];
+        document.getElementById("letter0_0").style.backgroundImage = "linear-gradient(#e44752, #d92730)";
+        rand = woordlijst[Math.floor(Math.random() * woordlijst.length)];
     }
+
+    var plekteller = [0, 0, 0, 0, 0];
+
+    function check(){
+        console.log(rand2);
+        var g1l2 = document.getElementById('letter0_1').value;
+        var g1l3 = document.getElementById('letter0_2').value;
+        var g1l4 = document.getElementById('letter0_3').value;
+        var g1l5 = document.getElementById('letter0_4').value;
+        console.log(rand2[0]+g1l2+g1l3+g1l4+g1l5);
+    }
+
+
+
+
 
     function autotab(current,to){
     if (current.getAttribute && 
