--- a/weekopdracht week 2/Lingo.html
+++ b/weekopdracht week 2/Lingo.html
@@ -42,36 +42,74 @@
         <button id="check" onclick="check()">Check</button>
         <button id="opnieuw" onclick="reload()">Opnieuw spelen</button>
     </div>
+    <div id="cred"></div>
 </body>
 <script>
 
     var woordlijst = ["hallo", "ollah", "fiets", "steif"];
     var rand = woordlijst[Math.floor(Math.random() * woordlijst.length)];
     var rand2 = "";
+    var rij = 0;
+    var randsplit = rand.split('');
+    var checkCounter = 0;
+    var credit = 100;
 
+    document.getElementById('cred').innerHTML = credit;
+    
     function reload(){
         console.log(rand);
-        console.log (rand[0]);
-        console.log (rand[1]);
-        console.log (rand[2]);
-        console.log (rand[3]);
-        console.log (rand[4]);
         rand2 = rand;
         document.getElementById("letter0_0").value = rand[0];
         document.getElementById("letter0_0").style.backgroundImage = "linear-gradient(#e44752, #d92730)";
         rand = woordlijst[Math.floor(Math.random() * woordlijst.length)];
     }
 
-    var plekteller = [0, 0, 0, 0, 0];
-
     function check(){
+
         console.log(rand2);
-        var g1l2 = document.getElementById('letter0_1').value;
-        var g1l3 = document.getElementById('letter0_2').value;
-        var g1l4 = document.getElementById('letter0_3').value;
-        var g1l5 = document.getElementById('letter0_4').value;
-        console.log(rand2[0]+g1l2+g1l3+g1l4+g1l5);
+
+        let invoer;
+        for (let i = 0 ; i < rand.length ; i++){
+            invoer = document.getElementById('letter'+rij+'_'+i);
+            console.log(invoer.value);
+ 
+            if (randsplit.includes(invoer.value)) {
+                invoer.style.backgroundImage = "linear-gradient(#d8bc49, #d8bc49)";
+            }
+
+            if (invoer.value === randsplit[i]){
+                invoer.style.backgroundImage = "linear-gradient(#e44752, #d92730)";
+            }
+        }
+        
+        var geradenWoord = true;
+
+        for (let i = 0 ; i < rand.length ; i++) {
+            invoer = document.getElementById('letter'+rij+'_'+i);
+            if (invoer.value != rand2[i]) {
+                geradenWoord = false;
+            }
+        }
+
+        if (geradenWoord == true) {
+            credit+=50;
+            document.getElementById('cred').innerHTML = credit;
+            console.log("Het woord is geraden");
+        }
+
+        rij++;
+
+        if (geradenWoord == false) {
+            credit-=50;
+            document.getElementById('cred').innerHTML = credit;
+            document.getElementById('letter'+rij+'_0').value = rand2[0];
+        }
+
+
     }
+
+
+
 
 
 
@@ -82,6 +120,6 @@
       current.value.length==current.getAttribute("maxlength")) {
         to.focus() 
         }
-}
+    }
 </script>
 </html>
